--- a/static/user_upload.html
+++ b/static/user_upload.html
@@ -51,8 +51,8 @@
         }
         .btn:hover { background: var(--primary-dark); transform: translateY(-1px); }
         .btn-small { padding:6px 12px; font-size:12px; margin-top:0; }
-        table { width:100%; margin-top:20px; border-collapse:collapse; }
-        th, td { padding:8px; border-bottom:1px solid #e0e0e0; text-align:left; }
+        table { width:100%; margin-top:20px; border-collapse:collapse; background: var(--white); }
+        th, td { padding:8px; border-bottom:1px solid var(--gray-200); text-align:left; }
         .hidden { display:none; }
         #replacePrompt { margin-top:20px; }
         #replacePrompt button { margin-right:10px; }
